--- a/website/flaming.html
+++ b/website/flaming.html
@@ -15,100 +15,101 @@
         <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     </head>
     <br>
-        <nav id="navigation-bar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="#"
-                    >Project Heartcode</a
-                >
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="index.html"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="flaming.html"
-                                >Flaming</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="harassment.html"
-                                >Harassment</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Quiz</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href=""
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                About Us
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="mentee1.html"
-                                        >Cayden</a
-                                    >
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="mentee2.html"
-                                        >Zi Rong</a
-                                    >
-                                </li>
-                                <li><hr class="dropdown-divider" /></li>
-                                <li>
-                                    <a class="dropdown-item" href="mentors.html"
-                                        >About the mentors</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
-                        <button
-                            class="btn btn-outline text-white"
-                            type="submit"
+    <nav id="navigation-bar" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="index.html"
+                >Project Heartcode</a
+            >
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+                class="collapse navbar-collapse"
+                id="navbarSupportedContent"
+            >
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a
+                            class="nav-link active"
+                            aria-current="page"
+                            href="index.html"
+                            >Home</a
                         >
-                            Search
-                        </button>
-                    </form>
-                </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="flaming.html"
+                            >Flaming</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="harassment.html"
+                            >Harassment</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            class="nav-link active"
+                            href="sharekindwords.html"
+                            >Share Kind Words</a
+                        >
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            role="button"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="mentees.html"
+                                    >Cayden & Zi Rong</a
+                                >
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="mentors.html"
+                                    >About the mentors</a
+                                >
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input
+                        class="form-control me-2"
+                        type="search"
+                        placeholder="Search"
+                        aria-label="Search"
+                    />
+                    <button
+                        class="btn btn-outline text-white"
+                        type="submit"
+                    >
+                        Search
+                    </button>
+                </form>
             </div>
-        </nav>
+        </div>
+    </nav>
         
-        <h1 style="text-align:center; margin-top: 30px ;margin: 20px; font-size: xx-large; font-weight: bold;">What is flamming?</h1>
+        <h1 style="text-align:center;margin: 30px; font-size: xx-large; font-weight: bold;">What is flamming?</h1>
         <div class="container">
             <div class="row">
                 <lottie-player class="col-md-3" src="https://lottie.host/4b098831-11dd-4754-a94f-06b79e4abb35/0EBVnTsMVx.json" background="transparent" speed="1" style="width: 150px; height:
