--- a/website/harassment.html
+++ b/website/harassment.html
@@ -52,61 +52,99 @@
 
 <body>
 
-            <nav id="navigation-bar" class="navbar navbar-expand-lg">
-                <div class="container-fluid">
-                    <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+    <nav id="navigation-bar" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="index.html"
+                >Project Heartcode</a
+            >
+            <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div
+                class="collapse navbar-collapse"
+                id="navbarSupportedContent"
+            >
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a
+                            class="nav-link active"
+                            aria-current="page"
+                            href="index.html"
+                            >Home</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="flaming.html"
+                            >Flaming</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="harassment.html"
+                            >Harassment</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a
+                            class="nav-link active"
+                            href="sharekindwords.html"
+                            >Share Kind Words</a
+                        >
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle"
+                            href="#"
+                            role="button"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="mentees.html"
+                                    >Cayden & Zi Rong</a
+                                >
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="flaming.html">Flaming</a>
+                            <li>
+                                <hr class="dropdown-divider" />
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="harassment.html">Harassment</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="quiz.html">Quiz</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    About Us
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li>
-                                        <a class="dropdown-item" href="mentee1.html">Cayden</a>
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="mentee2.html">Zi Rong</a>
-                                    </li>
-                                    <li>
-                                        <hr class="dropdown-divider" />
-                                    </li>
-                                    <li>
-                                        <a class="dropdown-item" href="mentors.html">About the mentors</a>
-                                    </li>
-                                </ul>
+                            <li>
+                                <a class="dropdown-item" href="mentors.html"
+                                    >About the mentors</a
+                                >
                             </li>
                         </ul>
-                        <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                            <button class="btn btn-outline text-white" type="submit">
-                                Search
-                            </button>
-                        </form>
-                    </div>
-                </div>
-            </nav>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input
+                        class="form-control me-2"
+                        type="search"
+                        placeholder="Search"
+                        aria-label="Search"
+                    />
+                    <button
+                        class="btn btn-outline text-white"
+                        type="submit"
+                    >
+                        Search
+                    </button>
+                </form>
+            </div>
+        </div>
+    </nav>
             <div class="meh4">
             <h1 class="fw-bolder text-bg-info p-3 mb-2 bg-danger text-white">HARASSMENT</h1>
         </div>
