--- a/website/mentees.html
+++ b/website/mentees.html
@@ -57,7 +57,11 @@
                             <a class="nav-link active" href="quiz.html">Quiz</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
+                            <a
+                                class="nav-link active"
+                                href="sharekindwords.html"
+                                >Share Kind Words</a
+                            >
                         </li>
                         <li class="nav-item dropdown">
                             <a
@@ -71,16 +75,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
-                                    <a class="dropdown-item" href="mentee1.html"
-                                        >Cayden</a
+                                    <a class="dropdown-item" href="mentees.html"
+                                        >Cayden & Zi Rong</a
                                     >
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" href="mentee2.html"
-                                        >Zi Rong</a
-                                    >
+                                    <hr class="dropdown-divider" />
                                 </li>
-                                <li><hr class="dropdown-divider" /></li>
                                 <li>
                                     <a class="dropdown-item" href="mentors.html"
                                         >About the mentors</a
