--- a/website/mentees.html
+++ b/website/mentees.html
@@ -107,6 +107,13 @@
                 </div>
             </div>
         </nav>
+        <img
+            class="d-block align-items-center mx-auto"
+            width="400"
+            height=""
+            src="../assets/menteephoto.jpg"
+            alt="Mentees"
+        />
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
