--- a/website/sharekindwords.html
+++ b/website/sharekindwords.html
@@ -16,8 +16,7 @@
             align-items: center;
             height: 580px;
             border-radius: 2%;
-            margin-left: 30px;
-            margin-right: 30px;
+            margin:2%
         }
     </style>
 </head>
