--- a/website/harassment.html
+++ b/website/harassment.html
@@ -38,7 +38,7 @@
         }
 
         #carouselExampleIndicators {
-            width: 70%;
+            width: 60%;
             margin: auto;
             margin-bottom: 2em;
         }
@@ -165,7 +165,7 @@
                         <img src="../assets/haraassment.webp" class="d-block w-80" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="../assets/download.jpeg" class="d-block w-80" alt="...">
+                        <img src="../assets/online_harrassment" class="d-block w-80" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="../assets/online_harassment_of_women_journalists.png" class="d-block w-80" alt="...">
