--- a/website/harassment.html
+++ b/website/harassment.html
@@ -30,7 +30,7 @@
             justify-content: center;
         }
 
-        .meh4{
+        .meh4 {
             margin-left: 30%;
             margin-right: 30%;
             border-radius: 20%;
@@ -38,14 +38,14 @@
         }
 
         #carouselExampleIndicators {
-            width: 70%;
+            width: 40%;
             margin: auto;
             margin-bottom: 2em;
         }
 
 
         #carouselExampleIndicators img {
-            height: 650px;
+            height: 300px;
         }
     </style>
 </head>
@@ -54,189 +54,150 @@
 
     <nav id="navigation-bar" class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="index.html"
-                >Project Heartcode</a
-            >
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
+            <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div
-                class="collapse navbar-collapse"
-                id="navbarSupportedContent"
-            >
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a
-                            class="nav-link active"
-                            aria-current="page"
-                            href="index.html"
-                            >Home</a
-                        >
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="flaming.html"
-                            >Flaming</a
-                        >
+                        <a class="nav-link active" href="flaming.html">Flaming</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="harassment.html"
-                            >Harassment</a
-                        >
+                        <a class="nav-link active" href="harassment.html">Harassment</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="quiz.html">Quiz</a>
                     </li>
                     <li class="nav-item">
-                        <a
-                            class="nav-link active"
-                            href="sharekindwords.html"
-                            >Share Kind Words</a
-                        >
+                        <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a
-                            class="nav-link dropdown-toggle"
-                            href="#"
-                            role="button"
-                            data-bs-toggle="dropdown"
-                            aria-expanded="false"
-                        >
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                             About Us
                         </a>
                         <ul class="dropdown-menu">
                             <li>
-                                <a class="dropdown-item" href="mentees.html"
-                                    >Cayden & Zi Rong</a
-                                >
+                                <a class="dropdown-item" href="mentees.html">Cayden & Zi Rong</a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
                             <li>
-                                <a class="dropdown-item" href="mentors.html"
-                                    >About the mentors</a
-                                >
+                                <a class="dropdown-item" href="mentors.html">About the mentors</a>
                             </li>
                         </ul>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
-                    <input
-                        class="form-control me-2"
-                        type="search"
-                        placeholder="Search"
-                        aria-label="Search"
-                    />
-                    <button
-                        class="btn btn-outline text-white"
-                        type="submit"
-                    >
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline text-white" type="submit">
                         Search
                     </button>
                 </form>
             </div>
         </div>
     </nav>
-            <div class="meh4">
-            <h1 class="fw-bolder text-bg-info p-3 mb-2 bg-danger text-white">HARASSMENT</h1>
+    <h1 style="text-align:center;margin: 30px; font-size: xx-large; font-weight: bold;">Harassment</h1>
+    <div class="container">
+        <div class="row text-center">
+            <p style="font-size: large"><b style="font-weight: bolder;">Harassment</b> covers a wide range of behaviors
+                of offensive nature. It is commonly understood as behavior that
+                demeans, humiliates, and intimidates a person</p>
         </div>
-            <h2 class="fw-bold text-bg-info p-3 mb-2 bg-body text-dark">Harassment covers a wide range of behaviors of offensive nature. It is commonly understood as behavior that
-                demeans, humiliates, and intimidates a person
-                <h2>       
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/haraassment.webp" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/download.jpeg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+    </div>
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="../assets/haraassment.webp" class="d-block w-100" alt="...">
             </div>
-            <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?
-            </h1>
-            <h2>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or
-                distress to another person. It can manifest in various forms and occur in different settings, including
-                the workplace, schools, public spaces, or online. Harassment is generally characterized by a repeated
-                and intentional pattern of behavior, creating a hostile or intimidating environment for the victim.<h2>
-                    <br>
-                    <p class="meh">What is online harassment?
-                        Harassment in the context of cyberbullying refers to the use of electronic communication, such
-                        as the
-                        internet and social media platforms, to repeatedly intimidate, threaten, or belittle
-                        individuals.
-                        Cyberbullying can take various forms, including sending hurtful messages, spreading rumors,
-                        sharing
-                        private information, creating fake profiles, or engaging in any other online behavior with the
-                        intent to
-                        harm someone emotionally or psychologically.
-                    </p>
-                    <div class="meh2">
-                        </divclass><iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/u7e2c6v1oDs?si=uo0JjqmHlAvOz3P1"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe></div>
-                    <hr>
-                    <ul class="bigger">
-                        <li>
-                            spreading rumours, ridiculing, and/or demeaning others
-                        </li>
-                        <li>
-                            harassing others because of their race, religion, sexual orientation, disability or
-                            transgender
-                            identity
-                            seeking revenge or deliberately embarrassing a person online
-                        </li>
-                        <li>
-                            engaging in unwanted behaviour of a sexual nature via text, email or other electronic and/or
-                            social
-                            media including using intimate images or recordings of another person
-                            impersonating others, even through their own accounts, with malicious intent
-                        </li>
-                        <li>
-                            sending inflammatory, inappropriate, rude and/or violent messages or comments about someone
-                            to
-                            provoke responses from other users
-                            exposing others to unwanted or offensive content in digital groups or meetings
-                        </li>
-                    </ul>
-                    <a class="meh3"
-                        href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in
-                        if emergency help is needed click this!</a>
+            <div class="carousel-item">
+                <img src="../assets/download.jpeg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="../assets/online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+    <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?
+    </h1>
+    <h2>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or
+        distress to another person. It can manifest in various forms and occur in different settings, including
+        the workplace, schools, public spaces, or online. Harassment is generally characterized by a repeated
+        and intentional pattern of behavior, creating a hostile or intimidating environment for the victim.<h2>
+            <br>
+            <p class="meh">What is online harassment?
+                Harassment in the context of cyberbullying refers to the use of electronic communication, such
+                as the
+                internet and social media platforms, to repeatedly intimidate, threaten, or belittle
+                individuals.
+                Cyberbullying can take various forms, including sending hurtful messages, spreading rumors,
+                sharing
+                private information, creating fake profiles, or engaging in any other online behavior with the
+                intent to
+                harm someone emotionally or psychologically.
+            </p>
+            <div class="meh2">
+                </divclass><iframe width="560" height="315"
+                    src="https://www.youtube.com/embed/u7e2c6v1oDs?si=uo0JjqmHlAvOz3P1" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe></div>
+            <hr>
+            <ul class="bigger">
+                <li>
+                    spreading rumours, ridiculing, and/or demeaning others
+                </li>
+                <li>
+                    harassing others because of their race, religion, sexual orientation, disability or
+                    transgender
+                    identity
+                    seeking revenge or deliberately embarrassing a person online
+                </li>
+                <li>
+                    engaging in unwanted behaviour of a sexual nature via text, email or other electronic and/or
+                    social
+                    media including using intimate images or recordings of another person
+                    impersonating others, even through their own accounts, with malicious intent
+                </li>
+                <li>
+                    sending inflammatory, inappropriate, rude and/or violent messages or comments about someone
+                    to
+                    provoke responses from other users
+                    exposing others to unwanted or offensive content in digital groups or meetings
+                </li>
+            </ul>
+            <a class="meh3"
+                href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in
+                if emergency help is needed click this!</a>
 
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-                        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-                        crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+                crossorigin="anonymous"></script>
 </body>
 
 </html>
