--- a/website/harassment.html
+++ b/website/harassment.html
@@ -14,27 +14,18 @@
             font-size: 22px;
         }
 
-        .meh {
-            font-size: 22px;
-        }
-
-        .meh2 {
+        .format_video {
             align-items: center;
             display: flex;
             justify-content: center;
         }
 
-        .meh3 {
-            align-items: center;
-            display: flex;
-            justify-content: center;
-        }
-
-        .meh4 {
+        .resource {
             margin-left: 30%;
             margin-right: 30%;
             border-radius: 20%;
             text-align: center;
+            font-size: large;
         }
 
         #carouselExampleIndicators {
@@ -110,93 +101,95 @@
             <p style="font-size: large"><b style="font-weight: bolder;">Harassment</b> covers a wide range of behaviors
                 of offensive nature. It is commonly understood as behavior that
                 demeans, humiliates, and intimidates a person</p>
-        </div>  
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="../assets/haraassment.webp" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/download.jpeg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../assets/online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        </div>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
             </div>
-            <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?
-            </h1>
-            <h2>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or
-                distress to another person. It can manifest in various forms and occur in different settings, including
-                the workplace, schools, public spaces, or online. Harassment is generally characterized by a repeated
-                and intentional pattern of behavior, creating a hostile or intimidating environment for the victim.<h2>
-                    <br>
-                    <p class="meh">What is online harassment?
-                        Harassment in the context of cyberbullying refers to the use of electronic communication, such
-                        as the
-                        internet and social media platforms, to repeatedly intimidate, threaten, or belittle
-                        individuals.
-                        Cyberbullying can take various forms, including sending hurtful messages, spreading rumors,
-                        sharing
-                        private information, creating fake profiles, or engaging in any other online behavior with the
-                        intent to
-                        harm someone emotionally or psychologically.
-                    </p>
-                    <div class="meh2">
-                        </divclass><iframe width="560" height="315"
-                            src="https://www.youtube.com/embed/u7e2c6v1oDs?si=uo0JjqmHlAvOz3P1"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen></iframe></div>
-                    <hr>
-                    <ul class="bigger">
-                        <li>
-                            spreading rumours, ridiculing, and/or demeaning others
-                        </li>
-                        <li>
-                            harassing others because of their race, religion, sexual orientation, disability or
-                            transgender
-                            identity
-                            seeking revenge or deliberately embarrassing a person online
-                        </li>
-                        <li>
-                            engaging in unwanted behaviour of a sexual nature via text, email or other electronic and/or
-                            social
-                            media including using intimate images or recordings of another person
-                            impersonating others, even through their own accounts, with malicious intent
-                        </li>
-                        <li>
-                            sending inflammatory, inappropriate, rude and/or violent messages or comments about someone
-                            to
-                            provoke responses from other users
-                            exposing others to unwanted or offensive content in digital groups or meetings
-                        </li>
-                    </ul>
-                    <a class="meh3"
-                        href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">in
-                        if emergency help is needed click this!</a>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="../assets/haraassment.webp" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/download.jpeg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="../assets/online_harassment_of_women_journalists.png" class="d-block w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <h1 style="text-align:center; margin: 20px; font-size: xx-large; font-weight: bold;">What is harrasment?
+        </h1>
+        <h5>Harassment refers to any unwanted behavior, actions, or conduct that causes discomfort, fear, or
+            distress to another person. It can manifest in various forms and occur in different settings, including
+            the workplace, schools, public spaces, or online. Harassment is generally characterized by a repeated
+            and intentional pattern of behavior, creating a hostile or intimidating environment for the victim.<h5>
 
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-                crossorigin="anonymous"></script>
+                <hr>
+                <h5>What is online harassment?
+                    Harassment in the context of cyberbullying refers to the use of electronic communication, such
+                    as the
+                    internet and social media platforms, to repeatedly intimidate, threaten, or belittle
+                    individuals.
+                    Cyberbullying can take various forms, including sending hurtful messages, spreading rumors,
+                    sharing
+                    private information, creating fake profiles, or engaging in any other online behavior with the
+                    intent to
+                    harm someone emotionally or psychologically.
+                </h5>
+                <br>
+                <div class="format_video">
+                    </divclass><iframe width="560" height="315"
+                        src="https://www.youtube.com/embed/u7e2c6v1oDs?si=uo0JjqmHlAvOz3P1" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        allowfullscreen></iframe></div>
+                <hr>
+                <h1>Examples</h1>
+                <ul class="bigger">
+                    <li>
+                        Spreading rumours, ridiculing, and/or demeaning others
+                    </li>
+                    <li>
+                        Harassing others because of their race, religion, sexual orientation, disability or
+                        transgender identity
+                    </li>
+                    <li>
+                        Seeking revenge or deliberately embarrassing a person online
+                    </li>
+                    <li>
+                        Engaging in unwanted behaviour of a sexual nature via text, email or other electronic and/or
+                        social media 
+                    </li>
+                    <li>
+                        Sending inflammatory, inappropriate, rude and/or violent messages or comments about someone
+                    </li>
+                    <li>
+                        Exposing others to unwanted or offensive content in digital groups or meetings
+                    </li>
+                </ul>
+                <a class="resource"
+                    href="https://www.police.gov.sg/media-room/news/20231017_man_to_be_charged_for_involvement_in_series_of_harassment_cases">
+                    If in emergency help is needed, click this!</a>
+
+                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+                    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+                    crossorigin="anonymous"></script>
 </body>
 
 </html>
