--- a/website/mentees.html
+++ b/website/mentees.html
@@ -1,133 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Project Heartcode 2023</title>
-        <link rel="icon" href="../assets/heartcode.png" />
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
-            crossorigin="anonymous"
-        />
-        <link href="styles.css" rel="stylesheet" />
-    </head>
-    <body>
-        <nav id="navigation-bar" class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand text-white" href="index.html"
-                    >Project Heartcode</a
-                >
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div
-                    class="collapse navbar-collapse"
-                    id="navbarSupportedContent"
-                >
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                aria-current="page"
-                                href="index.html"
-                                >Home</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="flaming.html"
-                                >Flaming</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="harassment.html"
-                                >Harassment</a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="quiz.html">Quiz</a>
-                        </li>
-                        <li class="nav-item">
-                            <a
-                                class="nav-link active"
-                                href="sharekindwords.html"
-                                >Share Kind Words</a
-                            >
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                role="button"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                About Us
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a class="dropdown-item" href="mentees.html"
-                                        >Cayden & Zi Rong</a
-                                    >
-                                </li>
-                                <li>
-                                    <hr class="dropdown-divider" />
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="mentors.html"
-                                        >About the mentors</a
-                                    >
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input
-                            class="form-control me-2"
-                            type="search"
-                            placeholder="Search"
-                            aria-label="Search"
-                        />
-                        <button
-                            class="btn btn-outline text-white"
-                            type="submit"
-                        >
-                            Search
-                        </button>
-                    </form>
-                </div>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Project Heartcode 2023</title>
+    <link rel="icon" href="../assets/heartcode.png" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous" />
+    <link href="styles.css" rel="stylesheet" />
+    <style>
+        .text-container {
+            margin-left: 30px;
+            margin-top: 20px;
+            background-color: #B5E2FA;
+            padding: 30px;
+            border-radius: 2%;
+        }
+    </style>
+</head>
+
+<body>
+    <nav id="navigation-bar" class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="index.html">Project Heartcode</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="flaming.html">Flaming</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="harassment.html">Harassment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="quiz.html">Quiz</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="sharekindwords.html">Share Kind Words</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            About Us
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item" href="mentees.html">Cayden & Zi Rong</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider" />
+                            </li>
+                            <li>
+                                <a class="dropdown-item" href="mentors.html">About the mentors</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button class="btn btn-outline text-white" type="submit">
+                        Search
+                    </button>
+                </form>
             </div>
-        </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <img
-                        class="d-block align-items-center mx-auto rounded-circle m-4"
-                        width="300"
-                        height=""
-                        src="../assets/menteephoto.jpg"
-                        alt="Mentees"
-                    />
-                </div>
-                <div class="col-md-9 text-center" style="margin-top: 60px">
-                    <p style="font-size: large">Hello!</p>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="row align-items-center"> 
+            <div class="col-md-3 text-center"> 
+                <img
+                    class="d-block mx-auto rounded-circle m-4"
+                    width="300"
+                    height=""
+                    src="../assets/menteephoto.jpg"
+                    alt="Mentees"
+                />
+            </div>
+            <div class="col-md-9"> 
+                <div class="text-container">
+                    <p><b>Name: </b>Zi Rong</p>
+                    <p><b>Secondary School:</b> Swiss Cottage Secondary School</p>
+                    <p><b>Interests: </b>Playing Games</p>
+                    <p><b>Takeaway From Heartcode: </b>The takeaway from Heartcode is learning different types of languages such as CSS, HTML & Bootstrap, and etc. I find these languages very interesting and fun to learn about, and for me, I would like to find out more about it in my future studies.</p>
+                    <hr>
+                    <p><b>Name: </b>Cayden</p>
+                    <p><b>Secondary School:</b> New Town Secondary School</p>
+                    <p><b>Interests:</b> Anime</p>
+                    <p><b>Takeaway From Heartcode:</b> I have learnt different types of coding like HTML and CSS and have realized how hard it is.</p>
                 </div>
             </div>
         </div>
+    </div>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
