--- a/website/mentors.html
+++ b/website/mentors.html
@@ -11,6 +11,15 @@
             integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
             crossorigin="anonymous"
         />
+        <style>
+            .text-container {
+                margin-left: 30px;
+                margin-top: 20px;
+                background-color: #B5E2FA;
+                padding: 30px;
+                border-radius: 2%;
+            }
+        </style>
         <link href="styles.css" rel="stylesheet" />
     </head>
     <body>
@@ -107,6 +116,33 @@
                 </div>
             </div>
         </nav>
+        <div class="container">
+            <div class="row align-items-center"> 
+                <div class="col-md-3 text-center"> 
+                    <img
+                        class="d-block mx-auto rounded-circle m-4"
+                        width="300"
+                        height=""
+                        src="../assets/menteephoto.jpg"
+                        alt="Mentees"
+                    />
+                </div>
+                <div class="col-md-9"> 
+                    <div class="text-container">
+                        <p><b>Name: </b>Ashley</p>
+                        <p><b>Major: </b>Computer Science (Year 2)</p>
+                        <p><b>Interests:</b>#</p>
+                        <p><b>Takeaway From Heartcode: </b>#</p>
+                        <hr>
+                        <p><b>Name: </b>Qian Yun</p>
+                        <p><b>Major: </b>Computer Science (Year 1)</p>
+                        <p><b>Interests:</b>#</p>
+                        <p><b>Takeaway From Heartcode:</b>#</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
