--- a/website/sharekindwords.html
+++ b/website/sharekindwords.html
@@ -10,7 +10,8 @@
     <link rel="icon" href="../assets/heartcode.png" />
     <style>
         .box {
-            background-color: #fff0a3;
+            background: url(../assets/bg.jpg);
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
