--- a/website/quiz.html
+++ b/website/quiz.html
@@ -21,7 +21,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #b5e2fa;
+            background-image: url(../assets/bg1.jpg);
             border-radius: 2%;
             margin: 2%
         }
@@ -93,7 +93,7 @@
     <div class="quiz-container">
         <form id="quizForm">
             <br>
-            <h1 class="text-center">Cyber Bullying Quiz</h1>
+            <h1 class="text-center text-light">Cyber Bullying Quiz</h1>
             <div class="quiz-content">
                 <h4>Question 1</h4>
                 <p>You CAN'T be cyber bullied on...</p>
